--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,28 +2,127 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-c6871490ed45>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-c6871490ed45>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Review on sequences\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Review on sequences"
+    "#Review on sequences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 3, 5, 4], [1, 4, 7, 3], [2, 5, 6, 5], [2, 3, 4, 1]]\n",
+      "{'0-0': [4, [0, 1]],\n",
+      " '0-1': [3, [1, 1]],\n",
+      " '1-0': [5, [0, 0]],\n",
+      " '1-1': [2, [2, 1]],\n",
+      " '1-3': [2, [2, 3]],\n",
+      " '2-0': [2, [2, 1]],\n",
+      " '2-1': [1, [2, 2]],\n",
+      " '2-2': [0, None],\n",
+      " '2-3': [1, [2, 2]],\n",
+      " '3-0': [3, [3, 1]],\n",
+      " '3-1': [2, [3, 2]],\n",
+      " '3-2': [1, [2, 2]],\n",
+      " '3-3': [2, [3, 2]]}\n",
+      "[[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]]\n",
+      "curr [1, 0]\n",
+      "[[0, 0], [0, 1], [1, 1], [2, 1], [2, 2], None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = [\n",
+    "    [2,3,5,4],\n",
+    "    [1,4,7,3],\n",
+    "    [2,5,6,5],\n",
+    "    [2,3,4,1]\n",
+    "]\n",
+    "\n",
+    "# matrix = [\n",
+    "#     [2,5],\n",
+    "#     [3,4]\n",
+    "# ]\n",
+    "\n",
+    "# matrix = [\n",
+    "#     [4, 10, 8],\n",
+    "#     [5, 10, 7],\n",
+    "#     [6, 7, 8]\n",
+    "# ]\n",
+    "\n",
+    "print(matrix)\n",
+    "from pprint import pprint\n",
+    "from queue import PriorityQueue\n",
+    "\n",
+    "def getNeighbors(matrix, x,y):\n",
+    "    nb = []\n",
+    "    if x + 1 < len(matrix):\n",
+    "        nb.append([x+1,y])\n",
+    "    if x - 1 >= 0:\n",
+    "        nb.append([x-1,y])  \n",
+    "    if y + 1 < len(matrix[0]):\n",
+    "        nb.append([x,y+1])\n",
+    "    if y - 1 >= 0:\n",
+    "        nb.append([x,y-1])\n",
+    "    return nb\n",
+    "\n",
+    "def getKey(x,y):\n",
+    "    return str(x) + '-' + str(y)\n",
+    "def solve(matrix, point):\n",
+    "    x = point[0]\n",
+    "    y = point[1]\n",
+    "    \n",
+    "    hashMap = dict()\n",
+    "    queue = PriorityQueue()\n",
+    "    queue.put([matrix[x][y], [x,y]])\n",
+    "    hashMap[getKey(x,y)] = [0,None]\n",
+    "    \n",
+    "    \n",
+    "    currentMaxNode = [0,0]\n",
+    "    maxPath = 0\n",
+    "    \n",
+    "    while not queue.empty():\n",
+    "        val, node = queue.get()\n",
+    "        neighbors = getNeighbors(matrix, node[0], node[1])\n",
+    "        for n in neighbors:\n",
+    "            x_n = n[0]\n",
+    "            y_n = n[1]\n",
+    "            if matrix[x_n][y_n] < matrix[node[0]][node[1]]:\n",
+    "                newVal = hashMap[getKey(node[0],node[1])][0] + 1\n",
+    "                if getKey(x_n, y_n) in hashMap:\n",
+    "                    value = hashMap[getKey(x_n, y_n)] # current val\n",
+    "                    if value[0] < newVal: # update new val and parent\n",
+    "                        hashMap[getKey(x_n, y_n)] = [newVal, [node[0], node[1]]]\n",
+    "                else:\n",
+    "                    hashMap[getKey(x_n, y_n)] = [newVal, [node[0], node[1]]]\n",
+    "                if hashMap[getKey(x_n, y_n)][0] > maxPath:\n",
+    "                    maxPath = hashMap[getKey(x_n, y_n)][0]\n",
+    "                    currentMaxNode = [x_n, y_n]\n",
+    "                queue.put([matrix[x_n][y_n], [x_n,y_n]])\n",
+    "    pprint(hashMap)\n",
+    "    newMatrix = [[[0] *len(matrix[0])]  * len(matrix)]\n",
+    "    print(newMatrix)\n",
+    "    print(\"curr\",currentMaxNode)\n",
+    "    parent = currentMaxNode\n",
+    "    path = []\n",
+    "    while parent != None:\n",
+    "        path.append(hashMap[getKey(parent[0], parent[1])][1])\n",
+    "        parent = hashMap[getKey(parent[0], parent[1])][1]\n",
+    "    print(path)\n",
+    "        \n",
+    "    \n",
+    "    \n",
+    "solve(matrix, [2,2])    \n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
