--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -123,6 +123,26 @@
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[3, 3, 3, 3], [3, 3, 3, 3], [3, 3, 3, 3], [3, 3, 3, 3]]]\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a =  [[[3]* 4] * 4]\n",
+    "print(a)\n",
+    "print(max(3,2,3,4,5,2))"
+   ]
   }
  ],
  "metadata": {
